version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/BeamSecBlockCommand.rst.txt
.. vale off



:class:`BeamSecBlockCommand`
============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.BeamSecBlockCommand(iBeamSecBlockCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IBeamSecBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a beam SECBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: BeamSecBlockCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Cells`
            - Gets the cells of the section.
          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Nodes`
            - Gets the nodes of the section.
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.
          * - :py:attr:`~Type`
            - Gets the section type.







Property detail
---------------
.. py:property:: Cells
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandCell]]


   
   Gets the cells of the section.
















   ..
       !! processed by numpydoc !!

.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Nodes
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNode]]


   
   Gets the nodes of the section.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]


   
   Gets the section type.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on